# zest

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  affine_legendre.cpp  affine_legendre.hpp  alignment.hpp  gauss_legendre.hpp  glq_transformer.hpp  lsq_transformer.cpp  lsq_transformer.hpp  plm_recursion.cpp  plm_recursion.hpp  real_sh_expansion.hpp  real_ylm.hpp  rotate.cpp  rotate.hpp  triangle_layout.hpp  uniform_grid_evaluator.cpp  uniform_grid_evaluator.hpp  zernike.cpp  zernike.hpp
benchmarks/: CMakeLists.txt  Makefile  affine_legendre_acc.py  benchmark_glq_transformer.cpp  benchmark_rotor.cpp  benchmark_sh_glq_backward_transform.cpp  benchmark_sh_glq_forward_transform.cpp  benchmark_sh_glq_transformer.cpp  benchmark_sh_rotor.cpp  benchmark_shrotor.cpp  benchmark_zernike.cpp  benchmark_zernike_glq_backward_transform.cpp  benchmark_zernike_glq_forward_transform.cpp  benchmark_zernike_glq_transformer.cpp  distributions.hpp  nanobench.cpp  nanobench_output_convert.py  plot_affine_legendre_acc.py  profile_sharm.cpp  radial_error.cpp  zernike_error.cpp  zernike_power.cpp
cmake/: FindSphinx.cmake  config.cmake.in
debug/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
debug/tests/: CTestTestfile.cmake  Makefile  cmake_install.cmake
docs/: CMakeLists.txt  Doxyfile.in  conf.py
docs/html/: .buildinfo  anatomy.html  genindex.html  getting_started.html  index.html  introduction.html  objects.inv  reference.html  search.html  searchindex.js
docs/html/.doctrees/: anatomy.doctree  environment.pickle  getting_started.doctree  index.doctree  introduction.doctree  reference.doctree
docs/html/_sources/: anatomy.rst.txt  getting_started.rst.txt  reference.rst.txt
docs/src/: anatomy.rst  getting_started.rst  index.rst  introduction.rst  reference.rst
examples/: sh_example.cpp  zernike_example.cpp  zernike_power_example.cpp
include/: alignment.hpp  array_complex_view.hpp  gauss_legendre.hpp  glq_transformer.hpp  grid_evaluator.hpp  indexing.hpp  layout.hpp  linearfit.hpp  lsq_transformer.hpp  matrix.hpp  md_array.hpp  md_span.hpp  packing.hpp  plm_recursion.hpp  pocketfft_spec.hpp  power_spectra.hpp  radial_zernike_recursion.hpp  real_sh_expansion.hpp  real_ylm.hpp  rotate.hpp  rotor.hpp  sh_conventions.hpp  sh_generator.hpp  sh_glq_transformer.hpp  triangle_layout.hpp  wignerd_collection.hpp  zernike.hpp  zernike_conventions.hpp  zernike_expansion.hpp  zernike_generator.hpp  zernike_glq_transformer.hpp
linearfit/: linearfit.cpp
linearfit/tests/: Makefile  test_linear_multifit.cpp
release/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
release/benchmarks/: CTestTestfile.cmake  Makefile  cmake_install.cmake  sh_glq_transformer_bench.json  sh_rotor_bench.json  zernike_glq_transformer_bench.json
release/tests/: CTestTestfile.cmake  Makefile  cmake_install.cmake
src/: grid_evaluator.cpp  linearfit.cpp  lsq_transformer.cpp  plm_recursion.cpp  power_spectra.cpp  radial_zernike_recursion.cpp  real_ylm.cpp  rotate.cpp  rotor.cpp  sh_generator.cpp  sh_glq_transformer.cpp  uniform_grid_evaluator.cpp  wignerd_collection.cpp  zernike.cpp  zernike_generator.cpp  zernike_glq_transformer.cpp
tests/: CMakeLists.txt  Makefile  sharm_rotate.cpp  test_affine_legendre.cpp  test_gauss_legendre.cpp  test_glq_transformer.cpp  test_grid_evaluator.cpp  test_index_range.cpp  test_linear_multifit.cpp  test_lsq_transformer.cpp  test_md_span.cpp  test_plm_recursion.cpp  test_radial_zernike_recursion.cpp  test_real_sh_expansion.cpp  test_rotate.cpp  test_rotor.cpp  test_sh_glq_transformer.cpp  test_triangle_layout.cpp  test_uniform_grid_evaluator.cpp  test_zernike.cpp  test_zernike_expansion.cpp  test_zernike_glq_transformer.cpp
